--- a/src/main/resources/templates/personList.html
+++ b/src/main/resources/templates/personList.html
@@ -22,6 +22,7 @@
             <td th:utext="${person.firstName}">...</td>
             <td th:utext="${person.lastName}">...</td>
         </tr>
+        <!--hello-->
     </table>
 </div>
 </body>
