commenting the code lines

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,6 +18,9 @@
    JSP's ${pageContext.request.contextPath}/edit.html
    would be @{/edit.html}
 
+this will redirect me to the main controller
+<a th:href="@{/personList}">Person List</a>
+rhis is a view
    -->
 
 <a th:href="@{/personList}">Person List</a>
